sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:17: error: not found: value tri
	} while(tri == false)
                ^